# react-native-incall-manager

./: OAT.xml  README.OpenSource  README.md  index.d.ts  index.js  package.json
harmony/: in_call_manager.har
harmony/in_call_manager/: BuildProfile.ets  build-profile.json5  hvigorfile.ts  oh-package.json5  ts.ts
harmony/in_call_manager/src/main/: module.json5
harmony/in_call_manager/src/main/cpp/: CMakeLists.txt  RNInCallManagerPackage.h  RNInCallManagerTurboModule.cpp  RNInCallManagerTurboModule.h
harmony/in_call_manager/src/main/ets/: RNInCallManagerPackage.ts  RNInCallManagerTurboModule.ts  index.ts
harmony/in_call_manager/src/main/ets/model/: ContinueBackgroundTaskModel.ts  PlayModel.ts
harmony/in_call_manager/src/main/ets/utils/: AudioFileUtil.ts  AudioRoutingManagerUtil.ts  AudioRoutingMangaerUtil.ts  AudioSessionNotificationUtil.ts  FlashUtil.ts  ProximityLockUtil.ts  VolumeManagerUtil.ts
harmony/in_call_manager/src/main/resources/base/element/: string.json
harmony/in_call_manager/src/main/resources/zh_CN/element/: string.json
src/: NativeInCallManagerModule.ts
